--- a/notebooks/Benoit/benoit-birdclef2024-competition.ipynb
+++ b/notebooks/Benoit/benoit-birdclef2024-competition.ipynb
@@ -22,7 +22,6 @@
    },
    "outputs": [],
    "source": [
-    "kaggle = True\n",
     "submission = True # change to True before submitting"
    ]
   },
@@ -80,20 +79,27 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "fc42c857",
-   "metadata": {
-    "papermill": {
-     "duration": 0.006415,
-     "end_time": "2024-04-06T10:56:43.862729",
-     "exception": false,
-     "start_time": "2024-04-06T10:56:43.856314",
-     "status": "completed"
-    },
-    "tags": []
-   },
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9711d049",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not running on Kaggle.\n"
+     ]
+    }
+   ],
    "source": [
-    "## Training"
+    "# Check if running on Kaggle\n",
+    "kaggle = ('KAGGLE_KERNEL_RUN_TYPE' in os.environ)\n",
+    "if kaggle:\n",
+    "    # Code specific to Kaggle\n",
+    "    print(\"Running on Kaggle!\")\n",
+    "else:\n",
+    "    print(\"Not running on Kaggle.\")"
    ]
   },
   {
@@ -122,16 +128,33 @@
     "    DATA_DIR = '../input/birdclef-2024/'\n",
     "else:\n",
     "    DATA_DIR = \"../../data/raw\" # local work\n",
-    "    \n",
+    "\n",
     "TRAIN_AUDIO_DIR = os.path.join(DATA_DIR, \"train_audio/\")\n",
     "\n",
     "if submission:\n",
     "    TEST_AUDIO_DIR = os.path.join(DATA_DIR,\"test_soundscapes/\")\n",
-    "    \n",
+    "\n",
     "else:\n",
     "    TEST_AUDIO_DIR = os.path.join(DATA_DIR,\"unlabeled_soundscapes/\")\n",
     "\n",
     "train_csv_path = os.path.join(DATA_DIR, \"train_metadata.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc42c857",
+   "metadata": {
+    "papermill": {
+     "duration": 0.006415,
+     "end_time": "2024-04-06T10:56:43.862729",
+     "exception": false,
+     "start_time": "2024-04-06T10:56:43.856314",
+     "status": "completed"
+    },
+    "tags": []
+   },
+   "source": [
+    "## Training"
    ]
   },
   {
@@ -328,7 +351,7 @@
     "    y_train = train_subset_df.primary_label\n",
     "else:\n",
     "    # Train val split\n",
-    "    train_train_df, val_df = train_test_split(train_subset_df, test_size=0.3, stratify = train_subset_df.primary_label, random_state=random_state) \n",
+    "    train_train_df, val_df = train_test_split(train_subset_df, test_size=0.3, stratify = train_subset_df.primary_label, random_state=random_state)\n",
     "    X_train_files = train_train_df.filepath\n",
     "    X_val_files = val_df.filepath\n",
     "\n",
@@ -386,7 +409,7 @@
     "    if mel:\n",
     "        mel = np.mean(librosa.feature.melspectrogram(y=audio_data, sr=sample_rate).T,axis=0)\n",
     "        result = np.hstack((result, mel))\n",
-    "    \n",
+    "\n",
     "    return result"
    ]
   },
@@ -414,7 +437,7 @@
    "source": [
     "def extract_features_filepaths(X_files, sample_rate=32000):\n",
     "    features = []\n",
-    "    \n",
+    "\n",
     "    for filepath in tqdm(X_files, desc='Processing files', total=len(X_files)):\n",
     "        # Process data with tqdm\n",
     "        audio_data, _ = librosa.load(filepath, sr=sample_rate)\n",
@@ -422,9 +445,9 @@
     "\n",
     "        # Append features and label\n",
     "        features.append(audio_features)\n",
-    "            \n",
-    "    X = np.array(features)  \n",
-    "    \n",
+    "\n",
+    "    X = np.array(features)\n",
+    "\n",
     "    return X"
    ]
   },
@@ -642,9 +665,9 @@
    "source": [
     "def extract_numbers(filename):\n",
     "    filename = filename.split('.')[0] # remove extension\n",
-    "    \n",
+    "\n",
     "    split = filename.split('_')\n",
-    "    \n",
+    "\n",
     "    if len(split) > 1:\n",
     "        return split[1]\n",
     "    elif len(split) == 1:\n",
@@ -692,7 +715,7 @@
     "    test_file_list = test_file_list[:5] # take only 5 elements to go faster on debugging\n",
     "\n",
     "test_number_list = [extract_numbers(file) for file in test_file_list]\n",
-    "    \n",
+    "\n",
     "print(f'Number of test files: {len(test_file_list)}')"
    ]
   },
@@ -763,19 +786,19 @@
     "# Process audio files and make predictions with tqdm progress bar\n",
     "for audio_file, file_number in tqdm(zip(test_file_list, test_number_list), total=len(test_file_list), desc='Processing test files'):\n",
     "    path = os.path.join(TEST_AUDIO_DIR, audio_file)\n",
-    "        \n",
+    "\n",
     "    # Split audio file into 5-second chunks\n",
     "    audio_chunks = split_audio(path, duration=5, sr=32000)\n",
-    "    \n",
+    "\n",
     "    for i in range(48): # assuming files of 4 minutes = 240 seconds\n",
     "    # for i, chunk in enumerate(audio_chunks):\n",
     "        chunk = audio_chunks[i]\n",
     "        chunk_end_time = (i + 1) * 5\n",
     "        row_id = f\"soundscape_{file_number}_{chunk_end_time}\"\n",
     "        row_id_list.append(row_id)\n",
-    "        \n",
+    "\n",
     "        features = extract_features(chunk)\n",
-    "        \n",
+    "\n",
     "        X_test.append(features)"
    ]
   },
@@ -1411,7 +1434,7 @@
    "outputs": [],
    "source": [
     "# Convert our results to csv\n",
-    "results.to_csv(\"submission.csv\", index=False)  "
+    "results.to_csv(\"submission.csv\", index=False)"
    ]
   }
  ],
@@ -1446,7 +1469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.6"
   },
   "papermill": {
    "default_parameters": {},
