--- a/notebooks/Benoit/benoit-models.ipynb
+++ b/notebooks/Benoit/benoit-models.ipynb
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -435,9 +435,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing files:  36%|██████████████████████████▋                                               | 283/784 [02:43<11:08,  1.33s/it]/home/bfrisque/.pyenv/versions/3.10.6/envs/birdclef2024-lewagon-1601/lib/python3.10/site-packages/librosa/core/pitch.py:101: UserWarning: Trying to estimate tuning from empty frequency set.\n",
+      "Processing files:  36%|████████████████████████████████▏                                                        | 283/784 [02:52<05:53,  1.42it/s]/home/bfrisque/.pyenv/versions/3.10.6/envs/birdclef2024-lewagon-1601/lib/python3.10/site-packages/librosa/core/pitch.py:101: UserWarning: Trying to estimate tuning from empty frequency set.\n",
       "  return pitch_tuning(\n",
-      "Processing files: 100%|██████████████████████████████████████████████████████████████████████████| 784/784 [09:16<00:00,  1.41it/s]\n"
+      "Processing files:  65%|██████████████████████████████████████████████████████████                               | 512/784 [04:57<02:44,  1.65it/s]"
      ]
     }
    ],
@@ -449,15 +449,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing files:  26%|███████████████████▌                                                       | 88/337 [01:03<02:09,  1.92it/s]"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_val1 = extract_features_filepaths1(X_val_files)"
    ]
